After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659469 - Missing plural handling for several strings
Missing plural handling for several strings
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
3.1.x
Other Linux
: Normal normal
: 2.26.0
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on:
Blocks:
 
 
Reported: 2011-09-19 12:42 UTC by André Klapper
Modified: 2011-11-07 17:55 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2



Description André Klapper 2011-09-19 12:42:11 UTC
Several strings are missing ngettext support - See https://live.gnome.org/TranslationProject/DevGuidelines/Plurals

#: ../pgp/seahorse-pgp-commands.c:179
msgid "Are you sure you want to permanently delete %d keys and identities?"
--
#: ../pgp/seahorse-pgp-commands.c:181
msgid "Are you sure you want to permanently delete %d keys?"
--
#: ../pgp/seahorse-pgp-commands.c:183
msgid "Are you sure you want to permanently delete %d identities?"
--
#: ../ssh/seahorse-ssh-commands.c:121
msgid "Are you sure you want to delete %d secure shell keys?"
Comment 1 Stef Walter 2011-11-06 18:18:59 UTC
All of these are only used for numbers higher that one. Nevertheless I've added ngettext. If I've done it wrong somehow, then please reopen with a patch. Thanks.
Comment 2 André Klapper 2011-11-07 09:36:57 UTC
(In reply to comment #1)
> All of these are only used for numbers higher that one.

Proper plural handling is way more than just "1 and the other numbers". Please take a look at https://live.gnome.org/TranslationProject/DevGuidelines/Plurals and enjoy languages with four different plural forms, or with one form for 1, 11, 21, 31, ... :-)
Comment 3 Stef Walter 2011-11-07 17:55:41 UTC
Right, thanks for the link. It's just not clear to me what to put in the singular argument to ngettext, when the prompt doesn't make sense for singular.

I just duplicated the plural text in the english singular in both arguments to ngettext, and I guess it'll do the right thing for other languages.