Use ngettext for strings that are only pluralized

https://bugzilla.gnome.org/show_bug.cgi?id=659469